[gd_scene load_steps=3 format=3 uid="uid://y0vvytsjrwuw"]

[ext_resource type="Script" uid="uid://c0bew5ur1impr" path="res://Menus/PauseMenu/pause_menu.gd" id="1_oxqkh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8jvg"]
bg_color = Color(0, 0, 0, 1)

[node name="Pause_menu" type="PanelContainer"]
process_mode = 2
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 22.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.981261, 0.972962)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_v8jvg")
script = ExtResource("1_oxqkh")

[node name="Close" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "  X  "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="ReturnToGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RETURN TO GAME"

[node name="OptionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "OPTION
"

[node name="ReturnToMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RETURN TO MENU"

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
